# 2048-v2.0

./: CMakeLists.txt  README.md  build.bat  main.cpp
src/: main.cpp
